smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/shape-name-syntax.smithy
// Invalid shape name: Not...Valid
namespace com.foo

structure Not...Valid {}
